<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="version_name">1.0</string>
    <!--基本参数 -->
    <string name="app_name">理工发布</string>
    <string name="app_username">请输入校园卡账号</string>
    <string name="app_psw">校园卡密码</string>
    <string name="app_login">登陆</string>
    <string name="app_nologin">无法登陆</string>
    <string name="app_vmode">游客登陆</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_detail">NewsDetail</string>
    <string name="title_activity_news">NewsAct</string>
    <string name="title_activity_login">LoginAct</string>
    <string name="title_activity_hello">HelloAct</string>
    <dimen name="window_width">480px</dimen>
    <string name="title_activity_about">AboutAct</string>
    <string name="title_activity_user_center">UserCenter</string>
    <string name="title_activity_my_collection">MyCollection</string>
    <string name="title_activity_my_comment">MyComment</string>
    <!--个人中心 -->
    <string name="nickname">小熊饼干</string>
    <string name="signature">今天又是美好的一天！</string>
    <string name="my_comments">我的评论</string>
    <string name="my_collections">我的收藏</string>
    <string name="edit_profile">编辑资料</string>
    <string name="profile">个人资料</string>
    <string name="done">完成</string>
    <string name="logout">退出登陆</string>
    <!-- 获取图片 -->
    <string name="GetImage_Camera">拍照</string>
    <string name="GetImage_Gallery">从图库中选择</string>
    <string name="GetImage_Cancel">取消</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="photo_add_name">拍照相册选择</string>
    <string name="okBtn">确定</string>
    <string name="cancelBtn">取消</string>

</resources>
