<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/ActivityForegroundDark">

    <Button
        android:id="@+id/camera"
        style="@style/Register_IdentityChooseDialogButton"
        android:text="@string/GetImage_Camera"/>

    <Button
        android:id="@+id/gallery"
        android:layout_marginTop="10dp"
        style="@style/Register_IdentityChooseDialogButton"
        android:text="@string/GetImage_Gallery"/>

    <Button
        android:id="@+id/cancel"
        android:layout_marginTop="10dp"
        style="@style/Register_IdentityChooseDialogButton"
        android:background="@drawable/button_white_background_pressed"
        android:text="@string/GetImage_Cancel"/>

</LinearLayout>